# hyperion-library

./: .gitignore  CMakeLists.txt  HyperionLibraryProject.pro  README.md  annual_efficiency_matrix.txt  atmosphere.cpp  auxfunction.cpp  dniashrae.cpp  environment.cpp  gcf.cpp  heliostat.cpp  heliostatinstantaneousefficiency.cpp  heliostatpowerperunitarea.cpp  idealefficiencymap.cpp  location.cpp  vec2d.cpp  vec3d.cpp
apps/: CMakeLists.txt  main.cpp
basic-console-project/: basic-console-project.pro  main.cpp
examples/py_annual_efficiency_matrix/: annual_efficiency_matrix.py  hyperionlibrary_python_wrapper.cp312-win_amd64.pyd
include/: atmosphere.h  auxfunction.h  boundaries.h  deintegrationconstants.h  deintegrator.h  dniashrae.h  environment.h  export.h  gcf.h  heliostat.h  heliostatinstantaneousefficiency.h  heliostatpowerperunitarea.h  idealefficiencymap.h  location.h  mathconstants.h  processheliostatfunctor.h  receiver.h  vec2d.h  vec3d.h
library-tests/: library-tests.pro  main.cpp
library-tests/tests/: atmosphere_test.cpp  atmosphere_test.h  auxfunction_test.cpp  auxfunction_test.h  boundaries_test.cpp  boundaries_test.h  dniashrae_test.cpp  dniashrae_test.h  location_test.cpp  location_test.h  receiver_test.cpp  receiver_test.h
src/: atmosphere.cpp  heliostat.cpp  idealefficiencymap.cpp  location.cpp  processheliostatfunctor.cpp  vec2d.cpp  vec3d.cpp  wrapper.cpp
test/: CMakeLists.txt  heliostat-test.cpp  testhypl.cpp
test/mathematica/: tests01.nb
towers-optimization-project/: main.cpp  towers-optimization-project.pro
